@@ -1,3 +1,8 @@
+2020-01-29  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* utils/csv2rec.c (field_cb): Detect and error when a row contains
+	too many columns.
+
 2020-01-28  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* utils/recutl.c (recutl_print_version): Update copyright.
